feat: add admins endpoint
