# src/api/controllers/admins/router.ts
@@ -2,20 +2,20 @@ import { Router, Request, Response } from 'express';
 import { validationResult } from 'express-validator';
 import jwt from 'express-jwt';
 
-import owners from './controller';
+import admins from './controller';
 
 import { findAnyUserByEmail } from '../../helpers/database-requests/findAnyUser';
 
 import {
   validation,
-  validationUpdateOwners,
+  validationUpdateAdmins,
 } from '../../middlewares/validation/validation';
 import JWT_CONFIG from '../../../constants/jwt/jwt';
-import Owner from '../../models/Users/Owner';
+import Admin from '../../models/Admin';
 
 const router = Router();
 
-router.post('/owners', validation, async (req: Request, res: Response) => {
+router.post('/admins', validation, async (req: Request, res: Response) => {
   try {
     const errors = validationResult(req);
     const allErrors = errors.array();
@@ -56,7 +56,7 @@ router.post('/owners', validation, async (req: Request, res: Response) => {
       });
     }
 
-    await owners.createOwner(req.body);
+    await admins.createAdmin(req.body);
 
     return res.status(200).json({
       message: 'Пользователь успешно зарегистрирован',
@@ -67,7 +67,7 @@ router.post('/owners', validation, async (req: Request, res: Response) => {
 });
 
 router.get(
-  '/owners',
+  '/admins',
   jwt({ secret: JWT_CONFIG.KEY, algorithms: ['HS256'] }),
   async (req: Request, res: Response) => {
     try {
@@ -77,18 +77,18 @@ router.get(
         });
       }
       // @ts-ignore
-      const { userId } = req.user;
-      const owner = await owners.findOwnerById(userId);
+      const { userId } = req.admin;
+      const admin = await admins.findAdminById(userId);
 
-      if (!owner) {
+      if (!admin) {
         return res.status(404).json({
           message: 'Пользователь не авторизован',
         });
       }
 
-      const ownerData = new Owner(owner.data);
+      const adminData = new Admin(admin.data);
 
-      return res.status(200).json(ownerData);
+      return res.status(200).json(adminData);
     } catch (error) {
       return res.status(500).json('Server Error');
     }
@@ -96,8 +96,8 @@ router.get(
 );
 
 router.put(
-  '/owners',
-  validationUpdateOwners,
+  '/admins',
+  validationUpdateAdmins,
   jwt({ secret: JWT_CONFIG.KEY, algorithms: ['HS256'] }),
   async (req: Request, res: Response) => {
     try {
@@ -119,20 +119,20 @@ router.put(
 
       // @ts-ignore
       const { userId } = req.user;
-      const owner = await owners.findOwnerById(userId);
+      const admin = await admins.findAdminById(userId);
 
-      if (!owner) {
+      if (!admin) {
         return res.status(404).json({
           message: 'Пользователь не авторизован',
         });
       }
 
-      const updatedData = { ...owner.data, ...req.body };
-      updatedData.email = owner.data.email;
-      updatedData.phone = owner.data.phone;
-      updatedData.active = owner.data.active;
+      const updatedData = { ...admin.data, ...req.body };
+      updatedData.email = admin.data.email;
+      updatedData.phone = admin.data.phone;
+      updatedData.active = admin.data.active;
 
-      const databaseResponse = await owners.updateOwner(updatedData, userId);
+      const databaseResponse = await admins.updateAdmin(updatedData, userId);
       if (databaseResponse) {
         return res.status(200).json({
           message: 'Данные успешно изменены',
